# Cloud

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  justfile
crates/control-plane/: Cargo.toml
crates/control-plane/src/: app.rs  config.rs  lib.rs  main.rs  server.rs
crates/control-plane/src/app/: tests.rs
crates/control-plane/src/app/tests/: build_tests.rs  platform_tests.rs  secret_tests.rs  source_lifecycle_tests.rs  source_private_tests.rs  source_subscription_tests.rs  source_tests.rs  workload_tests.rs
crates/control-plane/src/app/tests/workload_tests/: rollback.rs  source_build.rs
crates/control-plane/src/infrastructure/: flow.rs  mod.rs  oci_registry_client.rs  postgres.rs  vault_client.rs
crates/control-plane/src/modules/: mod.rs  platform.rs
crates/control-plane/src/modules/artifacts/: mod.rs
crates/control-plane/src/modules/artifacts/application/: build_run_reconciler.rs  mod.rs
crates/control-plane/src/modules/artifacts/domain/: mod.rs  test_support.rs  tests.rs
crates/control-plane/src/modules/artifacts/infrastructure/: build_cache_validator.rs  build_evidence_generator.rs  buildkit_build_service.rs  buildkit_build_service_tests.rs  local_node_artifact_store.rs  mod.rs  oci_registry_artifact_publisher.rs  oci_registry_artifact_publisher_tests.rs  runtime_build_output_validator.rs  runtime_build_output_validator_tests.rs  source_build_input_preparer.rs  source_build_input_preparer_tests.rs
crates/control-plane/src/modules/artifacts/presentation/: artifacts_module.rs  mod.rs
crates/control-plane/src/modules/edge/: mod.rs
crates/control-plane/src/modules/edge/application/: mod.rs  tests.rs
crates/control-plane/src/modules/edge/domain/: mod.rs  tests.rs
crates/control-plane/src/modules/edge/infrastructure/: deployment_route_updater.rs  domain_ownership_verifier.rs  gateway_acknowledgement_projector.rs  gateway_certificate_reconciler.rs  gateway_certificate_reconciler_tests.rs  gateway_command_queue.rs  gateway_snapshot_compiler.rs  local_gateway_certificate_authority.rs  mod.rs  route_target_reader.rs  vault_gateway_certificate_authority.rs  vault_gateway_certificate_authority_tests.rs
crates/control-plane/src/modules/edge/presentation/: edge_module.rs  mod.rs
crates/control-plane/src/modules/fleet/: mod.rs
crates/control-plane/src/modules/fleet/application/: certificate.rs  gateway_acknowledgement_projector.rs  log_compaction.rs  log_compaction_tests.rs  log_reader.rs  log_retention.rs  log_retention_tests.rs  mod.rs  node_artifact_authorizer.rs  tests.rs
crates/control-plane/src/modules/fleet/infrastructure/: local_certificate_authority.rs  local_certificate_authority_tests.rs  local_key_encryption.rs  local_log_chunk_store.rs  local_log_chunk_store_tests.rs  log_chunk_object.rs  mod.rs  s3_log_chunk_store.rs  s3_log_chunk_store_tests.rs  security_provider_tests.rs  vault_certificate_authority.rs  vault_client.rs  vault_key_encryption.rs
crates/control-plane/src/modules/fleet/presentation/: fleet_module.rs  mod.rs
crates/control-plane/src/modules/identity/: mod.rs
crates/control-plane/src/modules/identity/infrastructure/: api_token_verifier.rs  mod.rs
crates/control-plane/src/modules/identity/presentation/: guards.rs  identity_module.rs  mod.rs
crates/control-plane/src/modules/integration_events/: mod.rs
crates/control-plane/src/modules/integration_events/application/: mod.rs  outbox_relay.rs
crates/control-plane/src/modules/integration_events/infrastructure/: a3s_event_publisher.rs  mod.rs
crates/control-plane/src/modules/integration_events/presentation/: mod.rs
crates/control-plane/src/modules/operations/: mod.rs  tests.rs
crates/control-plane/src/modules/operations/application/: mod.rs  reconciler.rs
crates/control-plane/src/modules/operations/infrastructure/: flow_operation_engine.rs  mod.rs
crates/control-plane/src/modules/operations/presentation/: mod.rs  operations_module.rs
crates/control-plane/src/modules/projects/: mod.rs
crates/control-plane/src/modules/projects/presentation/: mod.rs  projects_module.rs
crates/control-plane/src/modules/secrets/: mod.rs
crates/control-plane/src/modules/secrets/application/: encryption.rs  mod.rs  plaintext.rs  result.rs
crates/control-plane/src/modules/secrets/domain/: mod.rs  tests.rs
crates/control-plane/src/modules/sources/: mod.rs
crates/control-plane/src/modules/workloads/: mod.rs
crates/control-plane/src/presentation/: api_response_interceptor.rs  mod.rs  request_id_middleware.rs
crates/control-plane/tests/: docker_deployment.rs  github_private_source.rs  oci_registry_integration.rs  postgres_integration.rs
crates/control-plane/tests/support/: activation_retirement_crash.rs  build_evidence.rs  build_runs.rs  cancellation.rs  deployment_flow.rs  edge.rs  edge_certificate_lifecycle.rs  fleet.rs  github_connection.rs  postgres_fixture.rs  secret_rotation_provider_crash.rs  secret_rotation_restart.rs  source_subscription.rs  workload_rollback.rs  workloads.rs
crates/control-plane/tests/support/deployment_flow/: cancellation.rs  log_recovery.rs
crates/control-plane/tests/support/secret_rotation_provider_crash/: process.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: agent.rs  agent_tests.rs  config.rs  control_plane.rs  executor.rs  gateway.rs  gateway_certificate.rs  gateway_reload_crash_tests.rs  gateway_remote_tests.rs  identity.rs  journal.rs  lib.rs  log_shipper.rs  log_shipper_tests.rs  main.rs  secret.rs  state_file.rs
crates/node-agent/src/artifact/: archive.rs  cache_gc.rs  cache_io.rs  manager.rs  mod.rs  store.rs  tests.rs
crates/node-agent/src/docker/: container.rs  health.rs  image.rs  logs.rs  mod.rs  outputs.rs  registry_credentials.rs  secrets.rs
crates/node-agent/tests/: docker_conformance.rs
crates/node-agent/tests/docker_conformance/: artifacts.rs  fixture.rs  health.rs  logs.rs  mounts.rs  networking.rs  outputs.rs  recovery.rs  resources.rs  secrets.rs  security.rs  specs.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: lib.rs  main.rs
(+821 files in other folders)
