[workspace]
members = [
    "crates/contracts",
    "crates/control-plane",
    "crates/node-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/A3S-Lab/Cloud"

[workspace.dependencies]
a3s-acl = "=0.2.2"
a3s-boot = { version = "=0.1.1", default-features = false, features = [
    "auth",
    "axum",
    "cqrs",
    "health",
    "logging",
    "openapi-schemas",
    "security",
] }
a3s-event = { version = "=0.3.0", default-features = false, features = ["nats"] }
a3s-flow = { git = "https://github.com/A3S-Lab/Flow.git", rev = "d11cc9ab1e859b23c5108882158ade8d296d93ab", default-features = false, features = ["postgres"] }
a3s-orm = { git = "https://github.com/A3S-Lab/ORM.git", rev = "6fdeae38032a5134e858cf3985f47d60cb5180ac", default-features = false, features = ["postgres"] }
a3s-runtime = { path = "../../crates/runtime" }
aes-gcm = "0.10"
async-trait = "0.1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bollard = { version = "0.18.1", default-features = false, features = ["http", "pipe"] }
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
futures-util = "0.3"
getrandom = "0.3"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
http-body-util = "0.1"
libc = "0.2"
rcgen = { version = "0.13.2", features = ["x509-parser"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4", "v5", "v7"] }
url = "2"
zeroize = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
