[package]
name = "a3s-cloud-node-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
a3s-acl.workspace = true
a3s-cloud-contracts = { path = "../contracts" }
a3s-runtime.workspace = true
async-trait.workspace = true
bollard.workspace = true
chrono.workspace = true
fs2.workspace = true
futures-util.workspace = true
libc.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true
